# scout

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  compose.override.yaml  compose.yaml  example.env  pyproject.toml  requirements.txt
.claude/: CLAUDE_SKILL.md  README.md  SKILL_SETUP.md  settings.local.json
.claude-plugin/: marketplace.json
.claude/skills/: scout.md
.github/workflows/: validate.yml
app/: config.yaml  main.py  router.py
context/: about-us.md  load_context.py  preferences.md
context/compiled/: index.md  lint-report.md
context/raw/: .manifest.json  agno-agents-overview-6ec22946.md  agno-documentation-home-ab19a0a5.md  agno-introduction-4df87475.md  api-design-principles.md  article-on-rag-dd8b1d43.md  context-engineering-primer.md  offsite-notes.md  onboarding-checklist.md  quarterly-goals-q2-2026.md  sample-handbook.md  scout-handbook.md  security-policy.md  team-directory.md
context/templates/: meeting-notes.md  project-brief.md  weekly-review.md
context/voice/: document.md  email.md  slack-message.md  wiki-article.md
db/: __init__.py  migrations.py  session.py  tables.py
docs/: EVALS.md  EVAL_AND_IMPROVE.md  GDRIVE_CONNECT.md  GOOGLE_AUTH.md  IMPROVE_WITH_CLAUDE.md  MCP.md  MCP_CONNECT.md  SLACK_CONNECT.md  TEST_WITH_CLAUDE.md  WIKI_GIT.md
evals/: __init__.py  __main__.py  cases.py  improve.py  judges.py  run.py  runner.py  smoke.py  wiring.py
evals/cases/: code_explorer.py  doctor.py  documents.py  drive_live.py  engineer.py  github_live.py  governance.py  isolation.py  knowledge.py  manifest.py  routing.py  s3_compile.py  security.py  slack.py  voice.py  wiki.py  wiki_compile.py
evals/live/: __init__.py  __main__.py  cases.py  client.py  runner.py
plugins/scout/: README.md
scout/: __init__.py  __main__.py  agent.py  compile_state.py  config.py  contexts.py  instructions.py  manifest.py  paths.py  settings.py  team.py
scout/agents/: __init__.py  code_explorer.py  compiler.py  doctor.py  engineer.py  explorer.py  linter.py  navigator.py  researcher.py  settings.py  syncer.py
scout/compile/: __init__.py  runner.py
scout/context/: __init__.py  _git.py  _redactor.py  _s3.py  _shared.py  _utils.py  backend.py  base.py  config.py  drive.py  github.py  gmail.py  local.py  provider.py  s3.py  slack.py  source_registry.py  wiki.py
scout/evals/: __init__.py  run_evals.py  test_cases.py
scout/scripts/: load_knowledge.py
scout/sources/: __init__.py  base.py  drive.py  github.py  local_folder.py  s3.py  slack.py
scout/tools/: __init__.py  ask_context.py  awareness.py  build.py  compile_tools.py  diagnostics.py  git.py  ingest.py  introspect.py  knowledge.py  learnings.py  manifest_tools.py  redactor.py  sources.py  wiki.py
scripts/: build_image.sh  eval_loop.sh  google_auth.py  google_setup.sh  railway_env.sh  railway_redeploy.sh  railway_up.sh  validate.sh
scripts/railway/: env.sh  redeploy.sh  up.sh
wiki/knowledge/: README.md
wiki/voice/: document.md  email.md  slack-message.md  x-post.md
(+102 files in other folders)
